tests/javacresults/op_int_int.txt
Intermediate.java:3: class, interface, or enum expected
Fatal error: exception Match_failure("javagen.ml", 102, 16)
^
1 error
